Upgrade to Java 17 (#320)
* [BOM] Bump faker version

* Code cleanup

* Upgrade to java 17 features

* Upgrade to java 17 features

* Upgrade to java 17 features

* Upgrade to java 17 features

* Code cleanup

* Code cleanup

* upgraded to Java 17

* upgraded to Java 17

* upgraded to Java 17

* Sonar fixes

* Optimise imports

* Optimise imports

* Using java 17 features

* Optimise imports

* Optimise imports

* Revert few changes

* updated test

* updated test

* updated test