@@ -30,7 +30,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
@@ -53,7 +52,7 @@ public class CollectionsTest {
         var first = List.of("a", "b", "c");
         var second = List.of(1, 2, 3);
 
-        var result = Streams.zip(first, second, (s, i) -> s + i).collect(Collectors.toList());
+        var result = Streams.zip(first, second, (s, i) -> s + i).toList();
 
         assertEquals(result.size(), 3);
         assertEquals(result.get(0), "a1");
