@@ -22,7 +22,6 @@ import lombok.experimental.UtilityClass;
 
 import java.util.List;
 import java.util.ServiceLoader;
-import java.util.stream.Collectors;
 
 /**
  * "Load the first service of the given type from the given class loader."
@@ -67,6 +66,6 @@ public class ServiceLoaderUtils {
      */
     public <T> List<T> load(final Class<T> type, final ClassLoader classLoader) {
         return Streams.of(ServiceLoader.load(type, classLoader).iterator())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
