@@ -25,7 +25,6 @@ import lombok.CustomLog;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.util.Optional.ofNullable;
@@ -50,7 +49,7 @@ class MultiExcelData extends AbstractExcelDataProvider {
         return excelSuite
                 .filter(map -> map.get(RUN).equalsIgnoreCase("yes"))
                 .map(map -> map.get("Feature") + NAME_SEPARATOR + map.get(TEST))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
